# AibgV3

./: README.md  aibg2017.cabal  bot.py  gamePlay.py  gamePlay2.py  gamePlay3.py  hero.py  stack.yaml
.stack-work/install/fab39206/flag-cache/: GLURaw-2.0.0.3-7BgHCYBb4mCH9sPAVeHvj8  GLUT-2.7.0.12-D4VElqaY42HtbxnlHNpMF  MonadRandom-0.5.1-EcpvpD35v121j9vVe9NicO  ObjectName-1.1.0.1-EiFOWjUQWWuLyOhtrmuIWX  OpenGL-3.0.2.0-AdwoE3KAcNl4FuRE88f9HT  OpenGLRaw-3.2.6.0-G383mWiohe8vReU2UWMCm  StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  adjunctions-4.3-7h9c1tdDZXu8P6FNm02huQ  aeson-1.1.2.0-9mqr6fCqEv51RJYIEmDXgS  aibg2017-0.1.0.0  asn1-encoding-0.9.5-9O0zcshJrvD221BKSNMvYh  asn1-parse-0.9.4-3ubLFWsBHvm4BnUG2htkn7  asn1-types-0.3.2-7myWEH87FvME0nCXFGf9z2  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  attoparsec-0.13.1.0-6iPyUAJoTAPGwcAOuGuR2G  attoparsec-iso8601-1.0.0.0-DrcNT23hxuNGPa1JJsz8Ui  bmp-1.2.6.3-43OLkH0uuwm831pBFpx2PZ  (+88 more)
AibgJebach/: AibgJebach.sln
AibgJebach/AibgJebach/: AibgJebach.csproj  Bot.cs  BotMove.cs  BotServer.cs  IClient.cs  MapAction.cs  MapState.cs  Program.cs  TileType.cs
AibgJebach/AibgJebach/Properties/: AssemblyInfo.cs
AibgJebach/ApiServer/: ApiServer.csproj  HttpClient.cs  Program.cs  Startup.cs
AibgJebach/ApiServer/Controllers/: ValuesController.cs
AibgJebach/ApiServer/Model/: GameObject.cs  HeroObject.cs  ResponseObject.cs
AibgJebach/ApiServer/Properties/: launchSettings.json
AibgJebach/CoreJebach/: Bot.cs  BotMove.cs  BotServer.cs  MapState.cs  Position.cs  Program.cs  ServerStartingInformation.cs  TileType.cs
src/: Api.hs  Common.hs  Grid.hs  Main.hs
(+4 files in other folders)
