name:                aibg2017
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/aibg2017#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aibg2017
  hs-source-dirs:      src
  other-modules:       Common
                       Api
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , servant-client
                     , servant
                     , aeson
                     , interlude-l
  default-extensions:  NoImplicitPrelude
